<resources>
    <string name="app_name">Showtime</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feature_request">You can submit your ideas for new features below!</string>
    <string name="btn_submit">Submit</string>
    <string name="feature_request_placeholder">Cool feature here</string>
    <string name="something_went_wrong">Oops, something went wrong</string>
    <string name="transition_toolbar">ToolbarTransition</string>
    <string name="feedback">We would love to hear back from you. Tell us anything and everything!</string>
    <string name="feedback_title">Feedback</string>
    <string name="email">EMAIL</string>
    <string name="name">NAME</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about_info">Crafted with love, \n Avi</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="reviews">Reviews</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="certification">Certification</string>
    <string name="genres">Genres</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="language">Language</string>
    <string name="tmdb">TMDB</string>
    <string name="imdb">IMDB</string>
    <string name="rotten_tomatoes">Rotten Tomatoes</string>
    <string name="metacritic">Metacritic</string>
    <string name="error.username_empty">Username cannot be empty</string>
    <string name="error.password_empty">Password cannot be empty</string>
    <string name="error.username_password_incorrect">Username or Password is not correct</string>
    <string name="error.email_empty">Email cannot be empty</string>
    <string name="error">Error</string>
    <string name="about">About</string>
    <string name="error.saving_changes">Error occurred while saving the changes</string>
    <string name="profile">Profile</string>
    <string name="title.feature_request">Feature Requests</string>
    <string name="settings">Settings</string>
    <string name="info.share_app">Checkout Showtime - Movies information, beautifully designed: https://goo.gl/ONNCOq</string>
    <string name="share_subject">Checkout Showtime</string>
    <string name="error.feature_empty">Feature cannot be empty</string>
    <string name="feedback_subject">Feedback for Showtime Android</string>
</resources>
